// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 1`] = `
Object {
  "description": "Nähtävilläolovaihe saamenkielisellä kuulutuksella ja ilmoituksella",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saameilmoitus.pdf",
        "tuotu": "2020-01-01T00:00:00+02:00",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saamekuulutus.pdf",
        "tuotu": "2020-01-01T00:00:00+02:00",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 2`] = `
Object {
  "yllapito S3 files Nähtävilläolovaihe saamenkielisellä kuulutuksella ja ilmoituksella": Object {
    "/1/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
    },
    "/1/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 3`] = `
Object {
  "description": "Nähtävilläolovaihe saamenkielisellä kuulutuksella ja ilmoituksella",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saameilmoitus.pdf",
        "tuotu": "2020-01-01T00:00:00+02:00",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/nahtavillaolo/1/saamekuulutus.pdf",
        "tuotu": "2020-01-01T00:00:00+02:00",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 4`] = `
Object {
  "yllapito S3 files Nähtävilläolovaihejulkaisu saamenkielisellä kuulutuksella ja ilmoituksella ylläpidossa": Object {
    "/1/T414 Kuulutus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414%20Kuulutus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/1/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414_1%20Ilmoitus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/1/T415 Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T415%20Ilmoitus%20kiinteistonomistajat%20nahtaville%20asettaminen.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/1/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "fileType": "AINEISTO",
    },
    "/1/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
    },
    "/1/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 5`] = `
Object {
  "description": "Julkisen nähtävilläolovaiheen saamenkieliset PDFt",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/nahtavillaolo/1/saameilmoitus.pdf",
        "tuotu": "2020-01-01T00:00:00+02:00",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/tiedostot/suunnitelma/3/nahtavillaolo/nahtavillaolo/1/saamekuulutus.pdf",
        "tuotu": "2020-01-01T00:00:00+02:00",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Nähtävilläolovaihe suorita nähtävilläolovaihe saamen kielellä onnistuneesti 6`] = `
Object {
  "public S3 files Nähtävilläolovaihejulkaisu saamenkielisellä kuulutuksella ja ilmoituksella kansalaisille": Object {
    "/T414 Kuulutus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414%20Kuulutus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414_1%20Ilmoitus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/T415 Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T415%20Ilmoitus%20kiinteistonomistajat%20nahtaville%20asettaminen.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
  },
}
`;
